crates/internal/brink-ide/tests/snapshots/line_context_snapshots__labeled_gather_bare_with_empty_continuation.snap
---
source: crates/internal/brink-ide/tests/line_context_snapshots.rs
expression: "render_fixture(\"\\\n=== start ===\n* Choice\n- (g)\n\")"
---
== LINES (base) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |* Choice| Choice w=1/ChoiceLine(sticky=false)
  2 |- (g)| Gather w=1/GatherContinuation
  3 || Blank w=0/TopLevel
== LINES (at-cue dialect) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |* Choice| Choice w=1/ChoiceLine(sticky=false)
  2 |- (g)| Gather w=1/GatherContinuation
  3 || Blank w=0/TopLevel
== STRUCTURAL FOLDS ==
0..2 from_start=false kind=Structural text=None
== RUNS (base) ==
== RUNS (at-cue dialect) ==
