crates/internal/brink-ide/tests/snapshots/line_context_snapshots__tag_inside_inline_branch_content.snap
---
source: crates/internal/brink-ide/tests/line_context_snapshots.rs
expression: "render_fixture(\"\\\n=== start ===\nHe said {mood: hi # tag} there.\nYou have it {now # t2|later # t3}.\nPlain with tag. # real\n-> END\n\")"
---
== LINES (base) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |He said {mood: hi # tag} there.| Narrative w=0/TopLevel tags
  2 |You have it {now # t2|later # t3}.| Narrative w=0/TopLevel tags
  3 |Plain with tag. # real| Narrative w=0/TopLevel tags
  4 |-> END| Divert w=0/TopLevel
  5 || Blank w=0/TopLevel
== LINES (at-cue dialect) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |He said {mood: hi # tag} there.| Narrative w=0/TopLevel tags
  2 |You have it {now # t2|later # t3}.| Narrative w=0/TopLevel tags
  3 |Plain with tag. # real| Narrative w=0/TopLevel tags
  4 |-> END| Divert w=0/TopLevel
  5 || Blank w=0/TopLevel
== STRUCTURAL FOLDS ==
0..4 from_start=false kind=Structural text=None
== RUNS (base) ==
1..3 Narrative
== RUNS (at-cue dialect) ==
1..3 Narrative
